2004-03-04  Till Kamppeter <till.kamppeter@gmx.net>

	* lib/Foomatic/DB.pm: Read paper size with unit out of the driverval
	  (needed for Omni), restrict paper sizes in the PPD to 2 digits
	  after the decimal point.

2004-02-27  Till Kamppeter <till.kamppeter@gmx.net>

	* lib/Foomatic/DB.pm: Eliminated another Perl warning.

2004-02-18  Till Kamppeter <till.kamppeter@gmx.net>

	* *: Tagged CVS for the release of foomatic-db-engine 3.0.1. 
	  Tag name: "foomatic-db-engine-3_0_1".

	* README, USAGE: Updated for version 3.0.1 final.

2004-02-17  Till Kamppeter <till.kamppeter@gmx.net>

	* lib/Foomatic/DB.pm: Eliminated some Perl warnings.

2004-02-14  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-ppdfile.in: Accept "-t <type>" option and ignore it,
	  for compatibility with the former "foomatic-datafile".

2004-01-24  Till Kamppeter <till.kamppeter@gmx.net>

	* *: Tagged CVS for the release of foomatic-db-engine 3.0.1rc2. 
	  Tag name: "foomatic-db-engine-3_0_1rc2".

	* README, USAGE: Updated for version 3.0.1rc2.

2004-01-22  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-configure.in: Eliminated warnings which appeared since
	  the insertion of "use strict;". Thanks to the hint from
	  Marcelo Ricardo Leitner (mrl at conectiva dot com dot br).

2004-01-22  Tim Waugh  <twaugh@redhat.com>

	* lib/Foomatic/DB.pm (perltoxml): New function.

2003-12-19  Till Kamppeter <till.kamppeter@gmx.net>

	* configure.in, Makefile.in, 
	  foomatic-printermap-to-gimp-print-xml.in: Added script to
	  update the driver entry of GIMP-Print with the printer list
	  of the src/foomatic/foomatic-printermap file of the
	  GIMP-Print source tarball (GIMP-Print 4.2.x or later).

	* Makefile.in: Make mkinstalldirs executable (Thanks to Florian
	  Diesch <diesch@spamfence.net>).

	* Makefile.in: Removed $(DESTDIR) from "make" calls for the Perl
	  libraries (Thanks to Florian Diesch <diesch@spamfence.net>).

2003-12-17  Tim Waugh <twaugh@redhat.com>
 